@@ -1,11 +1,11 @@
 package com.sysu.edu.todo;
 
+import static android.text.TextUtils.isEmpty;
+
 import android.content.ContentValues;
 import android.database.Cursor;
 import android.database.sqlite.SQLiteDatabase;
 import android.os.Build;
-import android.text.Editable;
-import android.util.Log;
 import android.view.Gravity;
 import android.view.Menu;
 import android.view.MenuItem;
@@ -17,98 +17,101 @@ import android.widget.NumberPicker;
 import androidx.appcompat.app.AlertDialog;
 import androidx.appcompat.widget.PopupMenu;
 import androidx.fragment.app.FragmentActivity;
+import androidx.recyclerview.widget.ConcatAdapter;
+import androidx.recyclerview.widget.RecyclerView;
+import androidx.viewbinding.ViewBinding;
 
 import com.google.android.material.chip.Chip;
 import com.google.android.material.chip.ChipGroup;
 import com.google.android.material.datepicker.MaterialDatePicker;
 import com.google.android.material.dialog.MaterialAlertDialogBuilder;
+import com.google.android.material.snackbar.Snackbar;
 import com.google.android.material.timepicker.MaterialTimePicker;
 import com.sysu.edu.R;
-import com.sysu.edu.databinding.DialogEditTextBinding;
 import com.sysu.edu.databinding.DialogTodoBinding;
 import com.sysu.edu.databinding.ItemFilterChipBinding;
 import com.sysu.edu.databinding.ItemPreferenceBinding;
+import com.sysu.edu.databinding.ItemTodoBinding;
 import com.sysu.edu.todo.info.TitleAdapter;
 import com.sysu.edu.todo.info.TodoAdapter;
 import com.sysu.edu.todo.info.TodoInfo;
+import com.sysu.edu.view.AdapterListener;
+import com.sysu.edu.view.EditTextDialog;
 
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
 
-public class InitTodo {
+public class TodoManager {
 
-    final TodoList todoDB;
-    final DialogTodoBinding dialogBinding;
+    final TodoHelper todoDB;
+    final DialogTodoBinding dialogTodoBinding;
     final AlertDialog todoDetailDialog;
     final FragmentActivity activity;
+    final ConcatAdapter concatAdapter;
     int toAddCode = 0;
     ArrayList<String> types;
     ArrayList<String> subjects;
     ArrayList<String> tags;
     TodoInfo todoInfo = new TodoInfo();
     int count;
+    private OnRefreshListener listener;
 
-    public InitTodo(FragmentActivity activity, TodoFragment todoFragment) {
+    public TodoManager(FragmentActivity activity, ConcatAdapter concatAdapter) {
+        this.concatAdapter = concatAdapter;
         this.activity = activity;
-        todoDB = new TodoList(activity, 7);
-        dialogBinding = DialogTodoBinding.inflate(activity.getLayoutInflater());
-        dialogBinding.prioritySlider.addOnChangeListener((_, value, _) -> todoInfo.setPriority((int) value));
-        DialogEditTextBinding itemEditTextBinding = DialogEditTextBinding.inflate(activity.getLayoutInflater());
+        todoDB = new TodoHelper(activity, 7);
+        dialogTodoBinding = DialogTodoBinding.inflate(activity.getLayoutInflater());
+        dialogTodoBinding.prioritySlider.addOnChangeListener((_, value, _) -> todoInfo.setPriority((int) value));
+        dialogTodoBinding.priorityContainer.updateAppearance(0, 1);
 
         todoDetailDialog = new MaterialAlertDialogBuilder(activity)
-                .setView(dialogBinding.getRoot())
+                .setView(dialogTodoBinding.getRoot())
                 .setPositiveButton(R.string.confirm, (_, _) -> {
-                    todoInfo.setTitle(Objects.requireNonNull(dialogBinding.title.getText()).toString());
-                    todoInfo.setDescription(Objects.requireNonNull(dialogBinding.description.getText()).toString());
+                    todoInfo.setTitle(Objects.requireNonNull(dialogTodoBinding.title.getText()).toString());
+                    todoInfo.setDescription(Objects.requireNonNull(dialogTodoBinding.description.getText()).toString());
                     if (todoInfo.getFunction() == TodoInfo.ADD) {
                         todoDB.addTodo(todoInfo);
                     } else if (todoInfo.getFunction() == TodoInfo.VIEW) {
                         todoDB.updateTodo(todoInfo);
                     }
-                    refresh(todoFragment);
+                    if (listener != null) listener.onRefresh();
                 })
                 .setNegativeButton(R.string.cancel, null)
                 .setNeutralButton(R.string.delete, (_, _) -> {
                     if (todoInfo.getFunction() == TodoInfo.VIEW) {
                         todoDB.deleteTodo(todoInfo);
-                        refresh(todoFragment);
+                        if (listener != null) listener.onRefresh();
                     }
                 })
                 .create();
-        AlertDialog todoAddDialog = new MaterialAlertDialogBuilder(activity)
-                .setView(itemEditTextBinding.getRoot())
-                .setPositiveButton(R.string.add, (_, _) -> {
-                    Editable toAdd = itemEditTextBinding.edit.getText();
-                    if (toAdd != null && !toAdd.toString().isEmpty()) {
-                        SQLiteDatabase db = todoDB.getWritableDatabase();
-                        ArrayList<String> array = Arrays.asList(types, subjects, tags).get(toAddCode);
-                        ChipGroup chipGroup = new ChipGroup[]{dialogBinding.todoType, dialogBinding.subject, dialogBinding.tag}[toAddCode];
-                        String name = toAdd.toString();
-                        if (!array.contains(name)) {
-                            array.add(name);
-                            createFilterChip(name, chipGroup, toAddCode);
-                        }
-                        ContentValues values = new ContentValues();
-                        values.put("name", name);
-                        db.insert(new String[]{"types", "subjects", "tags"}[toAddCode], null, values);
-                        selectChipIfPresent(chipGroup, array, name);
-                        if (toAddCode == 0) {
-                            todoInfo.setType(name);
-                        } else if (toAddCode == 1) {
-                            todoInfo.setSubject(name);
-                        } else if (toAddCode == 2) {
-                            todoInfo.setTag(name);
-                        }
-                    }
-                })
-                .setNegativeButton(R.string.cancel, null)
-                .create();
+
+        EditTextDialog todoItemAddDialog = new EditTextDialog(activity);
+        todoItemAddDialog.getDialog().setButton(AlertDialog.BUTTON_POSITIVE, activity.getString(R.string.confirm), (_, _) -> {
+            String value = todoItemAddDialog.getValue();
+            if (!isEmpty(value)) {
+                ArrayList<String> array = List.of(types, subjects, tags).get(toAddCode);
+                ChipGroup chipGroup = new ChipGroup[]{dialogTodoBinding.todoType, dialogTodoBinding.subject, dialogTodoBinding.tag}[toAddCode];
+                if (!array.contains(value)) {
+                    array.add(value);
+                    createFilterChip(value, chipGroup, toAddCode);
+                }
+                ContentValues values = new ContentValues();
+                values.put("name", value);
+                todoDB.getWritableDatabase().insert(new String[]{"types", "subjects", "tags"}[toAddCode], null, values);
+                selectChipIfPresent(chipGroup, array, value);
+                switch (toAddCode) {
+                    case 0 -> todoInfo.setType(value);
+                    case 1 -> todoInfo.setSubject(value);
+                    case 2 -> todoInfo.setTag(value);
+                }
+            }
+        });
+
         NumberPicker numberPicker = new NumberPicker(activity);
         numberPicker.setMinValue(0);
         numberPicker.setMaxValue(59);
@@ -118,21 +121,23 @@ public class InitTodo {
                 .setPositiveButton(R.string.confirm, (_, _) -> todoInfo.setRemindTime(String.format(Locale.getDefault(), "%02d%s", numberPicker.getValue(), activity.getString(R.string.minute))))
                 .setNegativeButton(R.string.cancel, null)
                 .create();
+
         MaterialDatePicker<Long> datePicker = MaterialDatePicker.Builder.datePicker().setTitleText(R.string.date).build();
         MaterialDatePicker<Long> ddlPicker = MaterialDatePicker.Builder.datePicker().setTitleText(R.string.date).build();
         MaterialTimePicker timePicker = new MaterialTimePicker.Builder().build();
 
         // 共用对话框外观设置
-        for (AlertDialog dialog : new AlertDialog[]{todoDetailDialog, todoAddDialog, remindDialog}) {
+        for (AlertDialog dialog : new AlertDialog[]{todoDetailDialog, remindDialog})
             setupDialogWindow(dialog, dialog != remindDialog);
-        }
 
         for (int i = 0; i < 3; i++) {
             int finalI = i;
-            List.of(dialogBinding.todoTypeAdd, dialogBinding.todoSubjectAdd, dialogBinding.todoTagAdd).get(i).setOnClickListener(_ -> {
+            List.of(dialogTodoBinding.todoTypeAdd, dialogTodoBinding.todoSubjectAdd, dialogTodoBinding.todoTagAdd).get(i).setOnClickListener(_ -> {
                 toAddCode = finalI;
-                itemEditTextBinding.getRoot().setHint(new int[]{R.string.type, R.string.subject, R.string.tag}[finalI]);
-                todoAddDialog.show();
+                int hint = new int[]{R.string.type, R.string.subject, R.string.tag}[finalI];
+                todoItemAddDialog.setHint(hint);
+                todoItemAddDialog.setTitle(hint);
+                todoItemAddDialog.show();
             });
         }
 
@@ -141,7 +146,7 @@ public class InitTodo {
         SimpleDateFormat dateString = new SimpleDateFormat("yyyy-MM-dd", Locale.getDefault());
 
         for (int i = 0; i < 4; i++) {
-            ItemPreferenceBinding itemPreferenceBinding = ItemPreferenceBinding.inflate(activity.getLayoutInflater(), dialogBinding.times, false);
+            ItemPreferenceBinding itemPreferenceBinding = ItemPreferenceBinding.inflate(activity.getLayoutInflater(), dialogTodoBinding.times, false);
             itemPreferenceBinding.itemTitle.setText(activity.getString(new int[]{R.string.date, R.string.time, R.string.remind, R.string.ddl}[i]));
             itemPreferenceBinding.itemIcon.setImageResource(new int[]{R.drawable.calendar, R.drawable.time, R.drawable.alarm, R.drawable.warning}[i]);
             itemPreferenceBinding.getRoot().updateAppearance(i, 4);
@@ -216,45 +221,61 @@ public class InitTodo {
                     break;
             }
 
-            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.P) {
-                menu.setGroupDividerEnabled(true);
-            }
+            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.P) menu.setGroupDividerEnabled(true);
             popupMenuArrayList.add(popupMenu);
             int finalI1 = i;
             itemPreferenceBinding.getRoot().setOnClickListener(_ -> popupMenuArrayList.get(finalI1).show());
-            dialogBinding.times.addView(itemPreferenceBinding.getRoot());
+            dialogTodoBinding.times.addView(itemPreferenceBinding.getRoot());
         }
 
-        dialogBinding.check.setOnCheckedChangeListener((_, isChecked) -> todoInfo.setStatus(isChecked ? TodoInfo.DONE : TodoInfo.TODO));
+        dialogTodoBinding.check.setOnCheckedChangeListener((_, isChecked) -> todoInfo.setStatus(isChecked ? TodoInfo.DONE : TodoInfo.TODO));
 
-        loadListFromTable("types", types = new ArrayList<>());
-        loadListFromTable("subjects", subjects = new ArrayList<>());
-        loadListFromTable("tags", tags = new ArrayList<>());
+        loadItemList("types", types = new ArrayList<>());
+        loadItemList("subjects", subjects = new ArrayList<>());
+        loadItemList("tags", tags = new ArrayList<>());
 
-        types.forEach(s -> createFilterChip(s, dialogBinding.todoType, 0));
-        subjects.forEach(s -> createFilterChip(s, dialogBinding.subject, 1));
-        tags.forEach(s -> createFilterChip(s, dialogBinding.tag, 2));
+        types.forEach(s -> createFilterChip(s, dialogTodoBinding.todoType, 0));
+        subjects.forEach(s -> createFilterChip(s, dialogTodoBinding.subject, 1));
+        tags.forEach(s -> createFilterChip(s, dialogTodoBinding.tag, 2));
 
         initDialog();
-        refresh(todoFragment);
+        if (listener != null) listener.onRefresh();
     }
 
-    public void filterStatus(TodoFragment f, int status) {
-        refresh(f, "status = ?", new String[]{String.valueOf(status)});
+    /**
+     * 过滤 TodoFragment 中的数据，根据状态
+     *
+     * @param status 状态值，TodoInfo.TODO 或 TodoInfo.DONE
+     *
+     */
+    public void filterByStatus(int status) {
+        refresh("status = ?", new String[]{String.valueOf(status)});
     }
 
-    public void refresh(TodoFragment f) {
-        refresh(f, null, null);
+    /**
+     * 刷新 TodoFragment 中的所有数据
+     *
+     *
+     */
+    public void refresh() {
+        refresh(null, null);
     }
 
-    public void refresh(TodoFragment f, String selection, String[] args) {
+    /**
+     * 刷新 TodoFragment 中的所有数据
+     *
+     * @param where SQL 语句中的 WHERE 子句
+     * @param args  WHERE 子句中的参数
+     *
+     */
+    public void refresh(String where, String[] args) {
         // 清除已有 adapters
-        f.getConcatAdapter().getAdapters().forEach(adp -> f.getConcatAdapter().removeAdapter(adp));
+        concatAdapter.getAdapters().forEach(concatAdapter::removeAdapter);
         try {
-            TodoAdapter todoAdapter = new TodoAdapter(this);
-            TitleAdapter titleAdapter = new TitleAdapter();
+//            TodoAdapter todoAdapter = new TodoAdapter(this);
+//            TitleAdapter titleAdapter = new TitleAdapter();
             SQLiteDatabase db = todoDB.getWritableDatabase();
-            try (Cursor cursor = db.query("todos", null, selection, args, null, null, "due_date")) {
+            try (Cursor cursor = db.query("todos", null, where, args, null, null, "due_date")) {
                 count = cursor.getCount();
                 while (cursor.moveToNext()) {
                     TodoInfo todoDetail = new TodoInfo();
@@ -276,25 +297,47 @@ public class InitTodo {
                     todoDetail.setAttachment(cursor.getString(cursor.getColumnIndexOrThrow("attachment")));
                     todoDetail.setDoneDate(cursor.getString(cursor.getColumnIndexOrThrow("done_datetime")));
                     todoDetail.setFunction(TodoInfo.VIEW);
-
-                    if (!titleAdapter.getTitle().equals(dueDate)) {
-                        titleAdapter = new TitleAdapter();
-                        titleAdapter.setTitle(dueDate);
-                        f.getConcatAdapter().addAdapter(titleAdapter);
-                        todoAdapter = new TodoAdapter(this);
-                        f.getConcatAdapter().addAdapter(todoAdapter);
-                    }
+//                    if (!titleAdapter.getTitle().equals(dueDate)) {
+//                        titleAdapter = new TitleAdapter();
+//                        titleAdapter.setTitle(dueDate);
+//                        concatAdapter.addAdapter(titleAdapter);
+//                        todoAdapter = new TodoAdapter(this);
+//                        concatAdapter.addAdapter(todoAdapter);
+//                    }
+                    TodoAdapter todoAdapter = new TodoAdapter(this);
                     todoAdapter.add(todoDetail);
+                    todoAdapter.setListener(new AdapterListener() {
+                        @Override
+                        public void onBind(RecyclerView.Adapter<RecyclerView.ViewHolder> adapter, RecyclerView.ViewHolder holder, int position) {
+                            ItemTodoBinding binding = ItemTodoBinding.bind(holder.itemView);
+                            binding.delete.setOnClickListener(_ -> {
+                                System.out.println(todoDetail.getId().getValue());
+                                todoDB.getWritableDatabase().delete("todos", "id=?", new String[]{String.valueOf(todoDetail.getId().getValue())});
+                                if (listener != null) listener.onRefresh();
+                            });
+                            binding.getRoot().setOnClickListener(_ -> {
+                                initDialog(todoAdapter.get(position));
+                                showDialog();
+                            });
+
+                        }
+
+                        @Override
+                        public void onCreate(RecyclerView.Adapter<RecyclerView.ViewHolder> adapter, ViewBinding binding) {
+
+                        }
+                    });
+                    concatAdapter.addAdapter(new TitleAdapter(isEmpty(dueDate) ? "无预定日期" : dueDate));
+                    concatAdapter.addAdapter(todoAdapter);
                 }
             }
-        } catch (Exception e) {
-            Log.e("TodoActivity", "refresh: ", e);
+        } catch (Exception _) {
         }
     }
 
-    void loadListFromTable(String table, List<String> target) {
-        SQLiteDatabase db = todoDB.getWritableDatabase();
-        try (Cursor cursor = db.query(table, null, null, null, null, null, null)) {
+
+    void loadItemList(String table, List<String> target) {
+        try (Cursor cursor = todoDB.getWritableDatabase().query(table, null, null, null, null, null, null)) {
             while (cursor.moveToNext()) {
                 target.add(cursor.getString(cursor.getColumnIndexOrThrow("name")));
             }
@@ -305,92 +348,80 @@ public class InitTodo {
     private void createFilterChip(String s, ChipGroup view, int toAddCode) {
         Chip chip = ItemFilterChipBinding.inflate(activity.getLayoutInflater(), view, false).getRoot();
         chip.setText(s);
-
-        chip.setOnLongClickListener(_ -> {
-            if (chip.isChecked()) {
-                switch (toAddCode) {
-                    case 0:
-                        todoInfo.setType(null);
-                        break;
-                    case 1:
-                        todoInfo.setSubject(null);
-                        break;
-                    case 2:
-                        todoInfo.setTag(null);
-                        break;
+        chip.setOnLongClickListener(v -> {
+            Snackbar.make(v, R.string.delete_warning, Snackbar.LENGTH_LONG).setAction("删除", _ -> {
+                if (chip.isChecked()) {
+                    switch (toAddCode) {
+                        case 0 -> todoInfo.setType(null);
+                        case 1 -> todoInfo.setSubject(null);
+                        case 2 -> todoInfo.setTag(null);
+                    }
                 }
-            }
-            view.removeView(chip);
-            Arrays.asList(types, subjects, tags).get(toAddCode).remove(s);
-            SQLiteDatabase db = todoDB.getWritableDatabase();
-            db.delete(new String[]{"types", "subjects", "tags"}[toAddCode], "name=?", new String[]{s});
+                view.removeView(chip);
+                List.of(types, subjects, tags).get(toAddCode).remove(s);
+                todoDB.getWritableDatabase().delete(new String[]{"types", "subjects", "tags"}[toAddCode], "name=?", new String[]{s});
+            }).show();
             return true;
         });
 
         chip.setOnCheckedChangeListener((_, isChecked) -> {
-            if (!isChecked) return;
-            switch (toAddCode) {
-                case 0:
-                    todoInfo.setType(chip.getText().toString());
-                    break;
-                case 1:
-                    todoInfo.setSubject(chip.getText().toString());
-                    break;
-                case 2:
-                    todoInfo.setTag(chip.getText().toString());
-                    break;
+            if (isChecked) {
+                switch (toAddCode) {
+                    case 0 -> todoInfo.setType(chip.getText().toString());
+                    case 1 -> todoInfo.setSubject(chip.getText().toString());
+                    case 2 -> todoInfo.setTag(chip.getText().toString());
+                }
             }
         });
         view.addView(chip, view.getChildCount() - 1);
     }
 
     public void initDialog(TodoInfo todoInfo) {
-        if (todoInfo == null) return;
-        this.todoInfo.copyFrom(todoInfo);
+        if (todoInfo != null) this.todoInfo.copyFrom(todoInfo);
     }
 
     public void initDialog() {
         if (todoInfo == null) todoInfo = new TodoInfo();
 
-        todoInfo.getTitle().observe(activity, dialogBinding.title::setText);
-        todoInfo.getDescription().observe(activity, dialogBinding.description::setText);
+        todoInfo.getTitle().observe(activity, dialogTodoBinding.title::setText);
+        todoInfo.getDescription().observe(activity, dialogTodoBinding.description::setText);
         todoInfo.getPriority().observe(activity, integer -> {
-            int priority = checkValid(integer) ? integer : 0;
-            dialogBinding.prioritySlider.setValue(priority);
-            dialogBinding.priorityValue.setText(new String[]{"无", "不重要且不紧急", "不重要但紧急", "重要但不紧急", "重要且紧急"}[priority]);
+            int priority = integer != null && integer != -1 ? integer : 0;
+            dialogTodoBinding.prioritySlider.setValue(priority);
+            dialogTodoBinding.priorityValue.setText(new String[]{"无", "不重要且不紧急", "不重要但紧急", "重要但不紧急", "重要且紧急"}[priority]);
         });
         todoInfo.getType().observe(activity, s -> {
-            if (checkValid(s)) {
+            if (!isEmpty(s)) {
                 if (!types.contains(s)) {
-                    createFilterChip(s, dialogBinding.todoType, 0);
+                    createFilterChip(s, dialogTodoBinding.todoType, 0);
                     types.add(s);
                 }
-                selectChipIfPresent(dialogBinding.todoType, types, s);
+                selectChipIfPresent(dialogTodoBinding.todoType, types, s);
             }
         });
         todoInfo.getSubject().observe(activity, s -> {
-            if (checkValid(s)) {
+            if (!isEmpty(s)) {
                 if (!subjects.contains(s)) {
-                    createFilterChip(s, dialogBinding.subject, 1);
+                    createFilterChip(s, dialogTodoBinding.subject, 1);
                     subjects.add(s);
                 }
-                selectChipIfPresent(dialogBinding.subject, subjects, s);
+                selectChipIfPresent(dialogTodoBinding.subject, subjects, s);
             }
         });
         todoInfo.getTag().observe(activity, s -> {
-            if (checkValid(s)) {
+            if (!isEmpty(s)) {
                 if (!tags.contains(s)) {
-                    createFilterChip(s, dialogBinding.tag, 2);
+                    createFilterChip(s, dialogTodoBinding.tag, 2);
                     tags.add(s);
                 }
-                selectChipIfPresent(dialogBinding.tag, tags, s);
+                selectChipIfPresent(dialogTodoBinding.tag, tags, s);
             }
         });
-        todoInfo.getStatus().observe(activity, integer -> dialogBinding.check.setChecked(integer != null && Objects.equals(integer, TodoInfo.DONE)));
-        todoInfo.getDueDate().observe(activity, i -> ItemPreferenceBinding.bind(dialogBinding.times.getChildAt(0)).itemContent.setText(checkValid(i) ? i : activity.getString(R.string.none)));
-        todoInfo.getDueTime().observe(activity, i -> ItemPreferenceBinding.bind(dialogBinding.times.getChildAt(1)).itemContent.setText(checkValid(i) ? i : activity.getString(R.string.none)));
-        todoInfo.getRemindTime().observe(activity, i -> ItemPreferenceBinding.bind(dialogBinding.times.getChildAt(2)).itemContent.setText(checkValid(i) ? i : activity.getString(R.string.none)));
-        todoInfo.getDdlDate().observe(activity, i -> ItemPreferenceBinding.bind(dialogBinding.times.getChildAt(3)).itemContent.setText(checkValid(i) ? i : activity.getString(R.string.none)));
+        todoInfo.getStatus().observe(activity, integer -> dialogTodoBinding.check.setChecked(integer != null && Objects.equals(integer, TodoInfo.DONE)));
+        todoInfo.getDueDate().observe(activity, i -> ItemPreferenceBinding.bind(dialogTodoBinding.times.getChildAt(0)).itemContent.setText(!isEmpty(i) ? i : activity.getString(R.string.none)));
+        todoInfo.getDueTime().observe(activity, i -> ItemPreferenceBinding.bind(dialogTodoBinding.times.getChildAt(1)).itemContent.setText(!isEmpty(i) ? i : activity.getString(R.string.none)));
+        todoInfo.getRemindTime().observe(activity, i -> ItemPreferenceBinding.bind(dialogTodoBinding.times.getChildAt(2)).itemContent.setText(!isEmpty(i) ? i : activity.getString(R.string.none)));
+        todoInfo.getDdlDate().observe(activity, i -> ItemPreferenceBinding.bind(dialogTodoBinding.times.getChildAt(3)).itemContent.setText(!isEmpty(i) ? i : activity.getString(R.string.none)));
     }
 
     public void showDialog() {
@@ -403,41 +434,31 @@ public class InitTodo {
         showDialog();
     }
 
-    boolean checkValid(String string) {
-        return string != null && !string.isEmpty();
-    }
-
-    boolean checkValid(Integer integer) {
-        return integer != null && integer != -1;
-    }
 
     private void setupDialogWindow(AlertDialog dialog, boolean applyPadding) {
-        if (dialog == null) return;
-        dialog.setCanceledOnTouchOutside(false);
-        Window window = Objects.requireNonNull(dialog.getWindow());
-        if (applyPadding) {
-            FrameLayout content = dialog.findViewById(android.R.id.content);
-            if (content != null) content.setPadding(48, 48, 48, 0);
+        if (dialog != null) {
+            dialog.setCanceledOnTouchOutside(false);
+            Window window = Objects.requireNonNull(dialog.getWindow());
+            if (applyPadding) {
+                FrameLayout content = dialog.findViewById(android.R.id.content);
+                if (content != null) content.setPadding(48, 48, 48, 0);
+            }
+//        window.setGravity(Gravity.BOTTOM);
+//        window.setBackgroundDrawableResource(R.drawable.top_capsule);
+//        window.setLayout(WindowManager.LayoutParams.MATCH_PARENT, WindowManager.LayoutParams.WRAP_CONTENT);
+            window.setWindowAnimations(com.google.android.material.R.style.Animation_Design_BottomSheetDialog);
+            window.addFlags(WindowManager.LayoutParams.FLAG_DRAWS_SYSTEM_BAR_BACKGROUNDS);
+            window.clearFlags(WindowManager.LayoutParams.FLAG_TRANSLUCENT_STATUS);
+            window.setSoftInputMode(WindowManager.LayoutParams.SOFT_INPUT_ADJUST_RESIZE);
         }
-        window.setGravity(Gravity.BOTTOM);
-        window.setBackgroundDrawableResource(R.drawable.top_capsule);
-        window.setLayout(WindowManager.LayoutParams.MATCH_PARENT, WindowManager.LayoutParams.WRAP_CONTENT);
-        window.setWindowAnimations(com.google.android.material.R.style.Animation_Design_BottomSheetDialog);
-        // View decorView = window.getDecorView();
-
-        window.addFlags(WindowManager.LayoutParams.FLAG_DRAWS_SYSTEM_BAR_BACKGROUNDS);
-        window.clearFlags(WindowManager.LayoutParams.FLAG_TRANSLUCENT_STATUS);
-        window.setSoftInputMode(WindowManager.LayoutParams.SOFT_INPUT_ADJUST_RESIZE);
     }
 
     private void selectChipIfPresent(ChipGroup group, List<String> list, String value) {
         if (value == null || list == null) return;
         int idx = list.indexOf(value);
         int childIndex = idx + 1; // 因为最后一个是添加按钮
-        if (idx >= 0 && childIndex < group.getChildCount()) {
-            Chip c = (Chip) group.getChildAt(childIndex);
-            if (c != null) c.setChecked(true);
-        }
+        if (idx >= 0 && childIndex < group.getChildCount() && group.getChildAt(childIndex) instanceof Chip c)
+            c.setChecked(true);
     }
 
     public void updateTodo(TodoInfo item) {
@@ -446,5 +467,14 @@ public class InitTodo {
 
     public int getCount() {
         return count;
+    }
+
+    public void setOnRefreshListener(OnRefreshListener listener) {
+        this.listener = listener;
+        listener.onRefresh();
+    }
+
+    public interface OnRefreshListener {
+        void onRefresh();
     }
 }
